2015-11-03  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/DebugOutput/debug_output.rb: Fidex '$debug_log_callback' to '$debug_log_callback.to_i' (now runnable both C edition and pure-Ruby edition).

2015-10-24  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.
	* sample/NamaspaceMigration: Fixed warning.

2015-10-19  vaiorabbit  <http://twitter.com/vaiorabbit>

	* lib/opengl_ext.rb: Now tries to find C Edition.
	* generator: Refactoring

2015-10-18  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generator: Refactoring

2015-10-17  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.
	* sample/GLFW/heightmap.rb : Added.

2015-10-16  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/GLFW/boing.rb, sample/util/rmath3d_plain.rb : Added.

2015-10-15  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/glfw31_build_dylib.sh: Now uses GLFW 3.1.2.

2015-10-14  vaiorabbit  <http://twitter.com/vaiorabbit>

	* lib/opengl.rb: Now tries to find C Edition.

2015-10-13  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-10-12  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generator: Fixed typo.

2015-10-03  vaiorabbit  <http://twitter.com/vaiorabbit>

	* ext/opengl_c: Added some experimental codes.

2015-10-01  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample: Unkind buffer string notations like "'        '" are rewriten into "' ' * 8" format.

2015-09-24  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/Extension/test_dds_texture.rb: Added.
	* sample/NamespaceMigration/test_dds_texture.rb: Added.
	* sample/SDL2/testgl_sdl2-bindings.rb: Added.

2015-09-23  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Extension setup routines are divided into the module OpenGLExt.